--- a/OliverTurner_ProjectWork/Dashboard/multi-page-dash/assets/style.css
+++ b/OliverTurner_ProjectWork/Dashboard/multi-page-dash/assets/style.css
@@ -7,3 +7,32 @@ div.rounded-box {
     margin-right: 20px; /* Margin at the right of each box */
     background-color: #FFFFFF; /* Light background color for the box */
 }
+
+/* styles.css */
+.navbar {
+    background-color: #333;
+    padding: 10px;
+    font-family: 'sans-serif';
+}
+
+.nav-link {
+    color: white;
+    margin-right: 15px;
+    text-decoration: none;
+    padding: 5px;
+    font-family: 'Roboto';
+}
+
+.nav-link:hover {
+    color: #00CC96;
+    cursor: pointer;
+}
+
+.nav-divider {
+    color: white;
+    padding: 0 10px;
+}
+
+.Select-menu-outer, .Select-value, .Select-placeholder {
+    color: black !important;
+}
